--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    background-color: #292F3F;
+    color:#ffffff;
+}
+
+::-webkit-scrollbar{
+  display: none;
 }
 
 a {
@@ -15,7 +24,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +32,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
